# klappt

./: .gitignore  .gitmodules  CMakeLists.txt  HELPFUL.md  README.md  TESTS.md  build.gradle
cmake/xapian-core/: CMakeLists.txt
cmake/xapian-core/cmake/: config.h.in  version.h.in
config/: README.md  android-build-sign-install-arm64.sh  android-push-hotreload.sh  config-web-unix.sh
src/app/: app_context.h  app_status.h  event_codes.h  hotreload.h  main.cpp  words_init.h
src/base/: arena.h  arr.h  dyn_arr.h  filter_view.h  hash.cpp  hash.h  measure.h  pair.h  profiler.h  shuffle.cpp  shuffle.h  stack.h  stats.h  str_view.cpp  str_view.h  str_view_list.h
src/domain/: engine.cpp  engine.h  exercises.cpp  exercises.h  settings.h  tokenizer.cpp  tokenizer.h  word.h  word_id.h  word_store.cpp  word_store.h  words.h  words_codec.h  wparser.cpp  wparser.h
src/platform/: files.h  web_persist.cpp  web_persist.h
src/platform/apple/: Info.plist.in
src/platform/web/: web_persist.js  web_shell.html
src/ui/: clay_impl.cpp  clay_support.cpp  clay_support.h  dpi.h  entry.cpp  entry.h  screen_exercise.cpp  screen_exercise_review.cpp  screen_exercise_summary.cpp  screen_helpers.h  screen_learning_list.cpp  screen_onboarding.cpp  screen_settings.cpp  screen_start.cpp  screen_word.cpp  screen_word_edit.cpp  screen_word_suggestions.cpp  screen_word_view.cpp  screen_words_list.cpp  sdlcr.h  textcache.cpp  textcache.h  themes.cpp  themes.h  trs.cpp  trs.h  tslt.h
src/ui/components/: button.h  fast_list.h  keypad_island.cpp  keypad_island.h  list_island.cpp  list_island.h  render_helpers.h  switch_button.h  text_input.h  text_input_state.h  word_card.cpp  word_card.h  word_edit_state.h  word_view_state.h
tests/: arr_test.cpp  str_view_test.cpp  tokenizer_test.cpp
tools/: copy-web-build.sh  engine_lab.html  translations.py
translations/: screen_settings.tr  ui.tr
